deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carfinder-app
  labels:
    app: carfinder-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: carfinder-app
  template:
    metadata:
      labels:
        app: carfinder-app
    spec:
      containers:
        - name: carfinder-frontend
          image: 192.168.1.72:8085/carfinder-ui:latest
          ports:
            - containerPort: 80
        - name: carfinder-backend
          image: 192.168.1.72:8085/carfinder-api:latest
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
