deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carfinder-frontend-service
spec:
  selector:
    app: carfinder-app
  ports:
    - name: frontend
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: carfinder-backend-service
spec:
  selector:
    app: carfinder-app
  ports:
    - name: backend
      port: 8081
      targetPort: 8081
      nodePort: 30881
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      nodePort: 30336
  type: NodePort
